--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="referrer" content="no-referrer" />
     <link rel="stylesheet" href="https://zuozhaoxi.com/base/swiper/css/swiper.css">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1253535_l9h6lh4u8gm.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1253535_nbt95k34zwe.css">
+    <link href="css/mui.min.css" rel="stylesheet" />
     <script src="https://zuozhaoxi.com/base/swiper/js/swiper.js"></script>
+
+    <script src="js/mui.min.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        mui.init();
+    </script>
+    <script>
+        // var myChart = echarts.init(document.getElementById('echart'));
+        // myChart.setOption(option);
+    </script>
     <title>react-app</title>
 </head>
+
 <body>
     <div id="app">
-        
+
     </div>
 </body>
+<script src="https://unpkg.com/echarts@4.2.1/dist/echarts.min.js"></script>
+
 </html>
